namespace PolymorphismInterface.Interfaces
{
    public interface IDescribing
    {
        string Description { get; }
    }
}