namespace PolymorphismInterface.Interfaces
{
    public interface IPointing
    {
        float X { get; }
        float Y { get; }
    }
}