namespace PolymorphismInterface.Interfaces
{
    public interface IRound
    {
        float Radius { get; }
    }
}