namespace PolymorphismInterface.Interfaces
{
    public interface IShape
    {
        float Perimeter { get; }
        float Area { get; }
    }
}