namespace PolymorphismInterface.Interfaces
{
    public interface ISurfaceOfRevolution
    {
        float SurfaceArea { get; }
        float EnclosedVolume { get; }
    }
}