namespace PolymorphismInterface.Interfaces
{
    public interface ITwoDimensionalShape
    {
        float Perimeter { get; }
        float Area { get; }
    }
}